--- a/app/views/public/index.html
+++ b/app/views/public/index.html
@@ -1,4 +1,11 @@
-
-<div class="flex items-center justify-center h-screen bg-gray-100">
-    <h1 class="text-4xl font-bold text-blue-600">Hello World</h1>
+<div class="container">
+  <div class="flex">
+    <div class="w-1/2 p-4">
+      <p class="text-sm">Loamy</p>
+      <p class="text-4xl">Own your ride</p>
+    </div>
+    <div class="w-1/2 p-4">
+      <!-- Content for the second column -->
+    </div>
+  </div>
 </div>
