--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -54,17 +54,17 @@
       <div class="container pt-16 md:pt-36 mx-auto flex flex-wrap flex-col md:flex-row">
         <!--Left Col-->
         <div class="flex flex-col w-full xl:w-2/5 lg:items-start overflow-y-hidden lg:h-screen">
-          <h1 class="my-10 text-3xl md:text-8xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
+          <h1 class="my-10 text-6xl md:text-8xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
             Own your ride
           </h1>
-          <span class="leading-normal md:text-3xl mb-2 text-center md:text-left">
+          <span class="leading-normal text-3xl mb-2 text-center md:text-left">
             Automatic service reminders<br>
 
           </span>
-          <span class="leading-normal md:text-3xl mb-2 text-center md:text-left">
+          <span class="leading-normal text-3xl mb-2 text-center md:text-left">
             AI-troubleshooting
           </span>
-          <span class="leading-normal md:text-3xl mb-12 text-center md:text-left">
+          <span class="leading-normal text-3xl mb-12 text-center md:text-left">
             Step-by-step guides
           </span>
 
