--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -51,21 +51,22 @@
       </div>
 
       <!--Main-->
-      <div class="container pt-16 md:pt-36 mx-auto flex flex-wrap flex-col md:flex-row">
+      <div class="container pt-9 md:pt-9 mx-auto flex flex-wrap flex-col md:flex-row">
         <!--Left Col-->
-        <div class="flex flex-col w-full xl:w-2/5 lg:items-start overflow-y-hidden lg:h-screen">
-          <h1 class="my-10 text-6xl md:text-8xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
+        <div class="flex flex-col xl:w-2/5 lg:items-start overflow-y-hidden lg:h-screen align-cen">
+          <h1 class="my-10 text-4xl md:text-6xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
             Own your ride
           </h1>
-          <span class="leading-normal text-3xl mb-2 text-center md:text-left">
+          <span class="leading-normal text-2xl mb-2 text-center md:text-left">
             Automatic service reminders<br>
 
           </span>
-          <span class="leading-normal text-3xl mb-2 text-center md:text-left">
-            AI-troubleshooting
-          </span>
-          <span class="leading-normal text-3xl mb-12 text-center md:text-left">
+          <span class="leading-normal text-2xl mb-2 text-center md:text-left">
             Step-by-step guides
+          </span>
+          <span class="leading-normal text-2xl mb-12 lg:mb-24 text-center md:text-left">
+           
+             AI-troubleshooting
           </span>
 
           <%= form_with url: waitlist_path, method: :post, local: false, id: 'waitlistForm', class: "bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4" do |f| %>
