--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -55,7 +55,7 @@
         <!--Left Col-->
         <div class="flex flex-col xl:w-2/5 lg:items-start overflow-y-hidden lg:h-screen align-cen">
           <h1 class="my-10 text-4xl md:text-6xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
-            Own your ride
+            Ride more, with Loamy:
           </h1>
           <span class="leading-normal text-xl lg:text-2xl mb-2 text-center md:text-left">
             Automatic service reminders<br>
@@ -68,18 +68,13 @@
              AI-troubleshooting
           </span>
 
-          <%= form_with url: waitlist_path, method: :post, local: false, id: 'waitlistForm', class: "bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-4 lg:pt-6 pb-8 mb-4" do |f| %>
-            <div class="mb-4">
-              <%= f.label :email, "Join the waitlist", class: "block text-blue-300 py-2 font-bold mb-2" %>
+          <%= form_with url: waitlist_path, method: :post, local: false, id: 'waitlistForm', class: "w-full lg:pt-6 pb-8 mb-4" do |f| %>
+            <div class="mb-4 flex flex-col md:flex-row items-center">
               <%= f.email_field :email, 
-                class: "shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out",
+                class: "shadow appearance-none mb-4 w-full md:w-3/5 border rounded p-2 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out mb-2 md:mb-0 md:mr-2",
                 placeholder: "you@somewhere.com" %>
-            </div>
-
-            <div class="flex items-center justify-between pt-2 lg:pt-4">
-              <%= f.submit "Sign Up", 
-                class: "bg-green-600 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out" %>
-              <span id="formMessage" class="ml-4 text-sm"></span>
+              <%= f.submit "Join the waitlist", 
+                class: "w-full md:w-auto bg-green-600 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out" %>
             </div>
           <% end %>
 
