--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -53,7 +53,7 @@
       <!--Main-->
       <div class="container px-4 pt-3 md:pt-9 mx-auto flex flex-wrap flex-col md:flex-row">
         <!--Left Col-->
-        <div class="flex flex-col xl:w-2/5 lg:items-start overflow-y-hidden lg:h-screen align-cen">
+        <div class="flex flex-col md:w-1/2 lg:items-start overflow-y-hidden lg:h-screen align-cen">
           <h1 class="my-10 text-4xl md:text-6xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
             Ride more, with Loamy:
           </h1>
@@ -81,8 +81,8 @@
         </div>
 
         <!--Right Col-->
-        <div class="flex flex-col w-full xl:w-3/5 p-2 h-screenoverflow-hidden ">
-          <img class="mx-auto w-full md:w-2/5 transform transition hover:scale-105 duration-700 ease-in-out hover:rotate-6" src="app.png" />
+        <div class="flex flex-col w-full md:w-1/2 p-2 h-screenoverflow-hidden ">
+          <img class="mx-auto w-full lg:w-3/5 md:w-4/5 transform transition hover:scale-105 duration-700 ease-in-out hover:rotate-6" src="app.png" />
         </div>
 
         <!--Footer-->
